# agentlens

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agentlens/: cli.py  habits.py  log_reader.py  mcp_server.py  metrics.py  pricing.yaml  report.py
agentlens/tests/: test_habits.py  test_log_reader.py  test_mcp_server.py  test_metrics.py
